# deepiri-aarflingo

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.sh
.github/: pull_request_template.md
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  mobile.yml
aarflingo_cli/: entrypoints.py
apps/aarf-pocket-android/: README.md  settings.gradle.kts
apps/aarf-pocket-android/app/: build.gradle.kts  proguard-rules.pro
apps/aarf-pocket-android/app/src/main/: AndroidManifest.xml
apps/aarf-pocket-android/app/src/main/java/dev/deepiri/aarflingo/: MainActivity.kt
apps/aarf-pocket-android/app/src/main/java/dev/deepiri/aarflingo/data/: Models.kt
apps/aarf-pocket-android/app/src/main/java/dev/deepiri/aarflingo/ui/: AarflingoApp.kt
apps/aarf-pocket-android/app/src/main/java/dev/deepiri/aarflingo/ui/components/: Components.kt
apps/aarf-pocket-android/app/src/main/java/dev/deepiri/aarflingo/ui/screens/: DashboardScreen.kt  HistoryScreen.kt  LiveScreen.kt  SettingsScreen.kt
apps/aarf-pocket-android/app/src/main/java/dev/deepiri/aarflingo/ui/theme/: Theme.kt
apps/aarf-pocket-android/app/src/main/res/drawable/: ic_launcher_foreground.xml
apps/aarf-pocket-android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
apps/aarf-pocket-ios/: README.md  project.yml
apps/aarf-pocket-ios/AarflingoPocket/: AarflingoPocketApp.swift  Info.plist
apps/aarf-pocket-ios/AarflingoPocket/Assets.xcassets/AarflingoLogo.imageset/: Contents.json
apps/aarf-pocket-ios/AarflingoPocket/Components/: IntentHeroCard.swift  TriadChart.swift
apps/aarf-pocket-ios/AarflingoPocket/Models/: AppState.swift
apps/aarf-pocket-ios/AarflingoPocket/Theme/: AarflingoTheme.swift
apps/aarf-pocket-ios/AarflingoPocket/Views/: DashboardView.swift  HistoryView.swift  LiveView.swift  RootTabView.swift  SettingsView.swift
apps/aarf-pocket-ios/scripts/: sync-branding.sh
apps/aarf-pocket/AARFPocket/: App.swift  ContentView.swift  CoreMLService.swift  Info.plist  IntentViewModel.swift
apps/aarf-studio/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
apps/aarf-studio/electron/: main.mjs  preload.mjs
apps/aarf-studio/src/main/: main.ts  preload.ts
apps/aarf-studio/src/renderer/: App.tsx  main.tsx  styles.css
apps/aarf-studio/src/renderer/components/: CameraView.tsx  HistoryView.tsx  IntentDashboard.tsx
apps/aarf-studio/src/renderer/hooks/: useCameraCapture.ts  useRuntimeLive.ts
apps/aarf-studio/src/renderer/lib/: platform.ts
assets/branding/: README.md
core/: ethogram_labels.py  feature_spec.py  modality_spec.py  onnx_decode.py  triad_math.py  triad_torch.py
core/metrics/: anticipate_fixtures.json  test_anticipate.py
core/tests/: test_modality_spec.py  test_onnx_decode.py  test_triad_math.py  test_triad_math_numpy.py
core/triad-spec/: baseline.json  event.json  prediction.json  session.json
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DATASETS.md  DEPLOY.md  ELECTRON.md  ETHICS.md  LABELING.md  MATH.md  PHASE2_COLLAR.md  ROADMAP.md  WEBCAM.md
ethogram/: behaviors.yaml  coupling-matrix.json  emotions.yaml  intents.yaml
infra/configs/: default.yaml  zones.default.yaml
infra/docker/: docker-compose.yml  jetson.Dockerfile  runtime.Dockerfile  train.Dockerfile
lib/aarf-gate/: package-lock.json  package.json
lib/aarf-gate/src/: gate.ts  index.ts  metrics.ts  types.ts
lib/aarf-gate/tests/: gate.test.ts
lib/aarf-physio/: pyproject.toml
lib/aarf-physio/aarf_physio/: __init__.py  cli.py  ecg.py  imu.py  model.py  sources.py  train.py
lib/aarf-physio/tests/: test_vitals.py
notebooks/: 01_triad_math_simulation.ipynb  02_training_pipeline.ipynb  README.md  requirements.txt
scripts/: bootstrap_commits.py  bootstrap_commits_data.py  commit_batches.sh  demo_protocol.sh  dev.sh  fetch_public_datasets.sh  full_pipeline.sh  record-baseline.sh  run_runtime.sh  setup.sh  smoke_pipeline.sh  sync-branding.sh  train_aarflingo.sh  train_pipeline.sh  verify_aarflingo.sh  verify_artifacts.py  wsl-webcam-bridge.sh
scripts/mobile/: README.md  connect-windows-adb.sh  ios-simulator.sh  run-android-app.sh  run-android-emulator.sh  setup-android-wsl.sh  verify-ios.sh  verify-mobile.sh
scripts/webcam/: requirements.txt  start_webcam_bridge.ps1  webcam_bridge.py
services/artifact-bridge/: pyproject.toml
services/artifact-bridge/app/: __init__.py  cli.py  export_coreml.py  export_onnx.py  manifest.py
services/audio/: pyproject.toml
services/audio/app/: cli.py  mfcc.py  synth.py  train.py
services/audio/tests/: test_mfcc.py
services/edge-runtime/: pyproject.toml
services/edge-runtime/app/: __init__.py  cli.py  loop.py
services/feedback/: pyproject.toml
services/feedback/app/: __init__.py  cli.py  store.py
services/feedback/tests/: test_store.py
services/forecast/: pyproject.toml
services/forecast/app/: __init__.py  cli.py  dataset.py  export_onnx.py  features.py  infer.py  labels.py  losses.py  train.py  triad_model.py
services/forecast/tests/: test_losses.py
services/ingest/: pyproject.toml
services/ingest/app/: baseline.py  capture.py  cli.py  clipper.py  webcam.py
services/ingest/tests/: test_clipper.py
services/labeler/: pyproject.toml
services/labeler/app/: __init__.py  anticipate.py  cli.py  review.py
services/perception/: pyproject.toml
services/perception/app/: __init__.py  cli.py  dog_detect.py  face.py  features.py  frame_codec.py  gaze.py  pipeline.py  pose.py  scene.py  temporal.py  vision_train.py  yolo_detect.py
services/perception/tests/: test_gaze.py
services/runtime/: pyproject.toml
services/runtime/app/: __init__.py  cli.py  engine.py  paths.py  platform.py  server.py
services/runtime/tests/: test_engine.py  test_server.py
