[tool.poetry]
name = "aarflingo"
version = "0.2.0"
description = "Deepiri AARFLingo — proactive canine intent forecasting"
authors = ["Deepiri <dev@deepiri.dev>"]
packages = [{ include = "aarflingo_cli" }]

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.15.0"
opencv-python-headless = "^4.10.0"
numpy = "^2.0.0"
pyyaml = "^6.0"
torch = "^2.5.0"
fastapi = "^0.115.0"
uvicorn = { version = "^0.32.0", extras = ["standard"] }
pydantic = "^2.9.0"
python-multipart = "^0.0.12"
onnx = "^1.17.0"
onnxruntime = "^1.19.0"
ultralytics = { version = "^8.3.0", optional = true }

[tool.poetry.extras]
yolo = ["ultralytics"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pillow = "^10.0.0"
httpx = "^0.27.0"

[tool.poetry.scripts]
aarflingo-runtime = "aarflingo_cli.entrypoints:runtime"
aarflingo-perception = "aarflingo_cli.entrypoints:perception"
aarflingo-ingest = "aarflingo_cli.entrypoints:ingest"
aarflingo-labeler = "aarflingo_cli.entrypoints:labeler"
aarflingo-forecast = "aarflingo_cli.entrypoints:forecast"
aarflingo-artifact-bridge = "aarflingo_cli.entrypoints:artifact_bridge"
aarflingo-feedback = "aarflingo_cli.entrypoints:feedback"
aarflingo-edge = "aarflingo_cli.entrypoints:edge"
aarflingo-audio = "aarflingo_cli.entrypoints:audio"
aarf-physio = "aarflingo_cli.entrypoints:physio"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
