[tool.poetry]
name = "aarf-physio"
version = "0.1.0"
description = "Canine ECG/IMU vitals encoders trained on public biomedical datasets"
authors = ["Deepiri <dev@deepiri.dev>"]
packages = [{ include = "aarf_physio" }]

[tool.poetry.dependencies]
python = "^3.11"
typer = ">=0.15.0"
numpy = "^2.0.0"
torch = "^2.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[tool.poetry.scripts]
aarf-physio = "aarf_physio.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
