[tool.poetry]
name = "aarflingo-artifact-bridge"
version = "0.1.0"
description = "Export ONNX/CoreML artifacts and manifests"
authors = ["Deepiri <dev@deepiri.dev>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.12.0"
torch = "^2.5.0"

[tool.poetry.scripts]
aarflingo-artifact-bridge = "app.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
