[tool.poetry]
name = "aarflingo-artifact-bridge"
version = "0.1.0"
description = "Export ONNX/CoreML artifacts and manifests"
authors = ["Deepiri <dev@deepiri.dev>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.15.0"
torch = "^2.5.0"
numpy = "^2.0.0"
pyyaml = "^6.0"
onnx = "^1.17.0"

[tool.poetry.scripts]
aarflingo-artifact-bridge = "app.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
