[tool.poetry]
name = "aarflingo-edge-runtime"
version = "0.1.0"
description = "Jetson / collar edge inference entrypoint"
authors = ["Deepiri <dev@deepiri.dev>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.12.0"
onnxruntime = "^1.19.0"
opencv-python-headless = "^4.10.0"
numpy = "^2.0.0"

[tool.poetry.scripts]
aarflingo-edge = "app.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
