[tool.poetry]
name = "aarflingo-feedback"
version = "0.1.0"
description = "Prediction feedback store and export for AARFLingo retraining"
authors = ["Deepiri <dev@deepiri.dev>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[tool.poetry.scripts]
aarflingo-feedback = "app.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
