[tool.poetry]
name = "aarflingo-forecast"
version = "0.1.0"
description = "Triad forecast model training and inference"
authors = ["Deepiri <dev@deepiri.dev>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.12.0"
torch = "^2.5.0"
numpy = "^2.0.0"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[tool.poetry.scripts]
aarflingo-forecast = "app.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
