[tool.poetry]
name = "aarflingo-labeler"
version = "0.1.0"
description = "Human review and anticipation labeling"
authors = ["Deepiri <dev@deepiri.dev>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.12.0"

[tool.poetry.scripts]
aarflingo-labeler = "app.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
