[tool.poetry]
name = "aarflingo-perception"
version = "0.1.0"
description = "Vision perception pipeline for AARFLingo"
authors = ["Deepiri <dev@deepiri.dev>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.12.0"
opencv-python-headless = "^4.10.0"
numpy = "^2.0.0"
pyyaml = "^6.0"
ultralytics = { version = "^8.3.0", optional = true }

[tool.poetry.extras]
yolo = ["ultralytics"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[tool.poetry.scripts]
aarflingo-perception = "app.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
