[tool.poetry]
name = "aarflingo-runtime"
version = "0.2.0"
description = "Live webcam inference API + WebSocket for AARF Studio"
authors = ["Deepiri <dev@deepiri.dev>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.12.0"
fastapi = "^0.115.0"
uvicorn = { version = "^0.32.0", extras = ["standard"] }
opencv-python-headless = "^4.10.0"
numpy = "^2.0.0"
pyyaml = "^6.0"
torch = "^2.5.0"
pydantic = "^2.9.0"
python-multipart = "^0.0.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pillow = "^10.0.0"
httpx = "^0.27.0"

[tool.poetry.scripts]
aarflingo-runtime = "app.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
